end cookchef structure & styles

--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -38,3 +38,30 @@
 .mb-10 {
     margin-bottom: 10px;
 }
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.mr-5 {
+    margin-right: 5px;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.mr-15 {
+    margin-right: 15px;
+}
+
+.my-30 {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+    width: 100%;
+}
