end part2 cookchef project + prettier

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: var(--front-family) ;
+    font-family: var(--font-family) ;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: var(--text-color);
@@ -23,4 +23,12 @@ ul {
 
 img {
     max-width: 100%
+}
+
+input {
+    font-family: var(--font-family);
+}
+
+::placeholder {
+    font-family: var(--font-family);
 }
