--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,7 +2,7 @@
    --primary: #ff6348;
    --grey-1: #20232a;
    --grey-2: #efefef;
-   --front-family: "Montserrat", sans-serif;
+   --font-family: "Montserrat", sans-serif;
    --box-shadow: 0 6px 9px 0 rgb(0 0 0 / 15%);
    --box-shadow-nav: rgb(0 0 0 / 22%) 0px 2px 18px 0px;
    --text-color: #444;
