--- a/src/components/Content.module.scss
+++ b/src/components/Content.module.scss
@@ -1,11 +1,40 @@
+@use '../assets/styles/mixins' as mixin;
+
 .grid {
     display: grid;
     place-content: center;
     grid-template-columns: repeat(3,350px);
     grid-auto-columns: repeat(3,350px);
-    gap: 20px
+    gap: 20px;
+
+    @include mixin.lg-lt {
+        grid-template-columns: repeat(2,350px);
+        grid-auto-columns: repeat(2,350px);
+    }
+
+    @include mixin.md-lt {
+        grid-template-columns: 350px;
+        grid-auto-columns: 350px;
+    }
+
+    @include mixin.xs {
+        grid-template-columns: 1fr;
+        grid-auto-columns: 1fr;
+    }
 }
 
 .contentCards {
-    width: 1130px;
+    width: 100%;
+    max-width: 1130px;
+}
+
+.searchBar {
+    padding: 10px 15px;
+    border: solid 1px var(--grey-1);
+    border-radius: 20px;
+    
+    input {
+        outline: 0;
+        border: 0;
+    }
 }
