--- a/src/assets/styles/_themes.scss
+++ b/src/assets/styles/_themes.scss
@@ -29,3 +29,22 @@
 .text-primary {
     color: var(--primary);
 }
+
+label {
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 3px;
+}
+
+input {
+    padding: 10px 15px;
+    border: solid 1px var(--grey-1);
+    border-radius: 20px;
+}
+
+.form-error {
+    margin: 0;
+    color: red;
+    font-size: 12px;
+    font-weight: 500;
+}
