--- a/src/pages/Homepage/components/Recipe/Recipe.module.scss
+++ b/src/pages/Homepage/components/Recipe/Recipe.module.scss
@@ -2,7 +2,22 @@
     border-radius: 20px;
     height: 400px;
     cursor: pointer;
+    position: relative;
 
+    > i {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 25px;
+        color: white;
+        cursor: pointer;
+        transition: color 0.2s;
+        z-index: 1;
+        
+        &:hover {
+            color: var(--primary);
+        }
+    }
     &:hover {
         img {
             transform: scale(1.1);
