Cookchef part 5 + clean

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -32,3 +32,8 @@ input {
 ::placeholder {
     font-family: var(--font-family);
 }
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
+}
