--- a/src/components/Header/components/HeaderMenu/Menu.module.scss
+++ b/src/components/Header/components/HeaderMenu/Menu.module.scss
@@ -10,9 +10,17 @@
         border-radius: 20px;
         transition: background-color 0.2s, color 0.2s;
 
+        a {
+            color: var(--primary);
+        }
+
         &:hover {
             background-color: var(--primary);
             color: white;
+
+            a {
+                color: white;
+            }
         }
     }
 }
